# patina

./: .gitignore  Cargo.toml  README.md
config/: log4rs.yaml
infrastructure/monitoring/: docker-compose.yml
scripts/: 1pub_1sub_qos0_loop.ps1
src/: broker.rs  connection.rs  connection_handler.rs  decoder.rs  encoder.rs  listener.rs  main.rs  mqtt.rs  session.rs  topic_handler.rs
src/broker/: broker.rs  mod.rs  packet_dispatcher.rs  packet_handler.rs  utils.rs
src/broker/handler/: connect_handler.rs  disconnect_handler.rs  mod.rs  pingreq_handler.rs  publish_handler.rs  pubrec_handler.rs  pubrel_handler.rs  subscribe_handler.rs  unsubscribe_handler.rs
src/connection/: connection.rs  connection_handler.rs  mod.rs  rx_connection_handler.rs  tx_connection_handler.rs
src/metrics/: MetricsRegistry.rs  metrics_registry.rs  metrics_server.rs  mod.rs
src/model/: control_packet.rs  fixed_header.rs  mod.rs  payload.rs  qos_level.rs  reason_code.rs  topic.rs  variable_header.rs
src/serdes/: decoder.rs  encoder.rs  mod.rs  mqtt.rs  mqtt_decoder.rs  mqtt_encoder.rs
src/serdes/deserializer/: error.rs  fixed_header_decoder.rs  mod.rs  payload_decoder.rs  property_decoder.rs  variable_header_decoder.rs
src/serdes/serializer/: error.rs  fixed_header_encoder.rs  mod.rs  payload_encoder.rs  property_encoder.rs  variable_header_encoder.rs
src/serdes/trait/: decoder.rs  encoder.rs
src/session/: client_handler.rs  mod.rs  session_handler.rs
src/tests/: mod.rs
src/tests/broker/: broker_tests.rs  broker_tests_data.rs  mod.rs
src/topic/: mod.rs  topic_handler.rs
(+1 files in other folders)
