[package]
name = "patina"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = "1.0.0"
bitreader = "0.3.4"
tokio = { version = "1.12.0", features = ["full"] }
bufstream = "0.1"
bytes="1.1.0"
lazy_static = "1.4.0"
chrono="0.4.19"
rand = "0.8.4"
metrics = "0.17.0"
metrics-exporter-prometheus = "0.6.1"
metrics-util = "0.10.1"
dashmap = "4.0.2"